crates/vue_oxc_toolkit/src/parser/snapshots/ast/error_multiple_langs_vue.snap
---
source: crates/vue_oxc_toolkit/src/test.rs
expression: result
---
=============== Program ===============
Program {
    span: Span {
        start: 0,
        end: 0,
    },
    node_id: Cell {
        value: NodeId(0),
    },
    scope_id: Cell {
        value: None,
    },
    source_text: "",
    comments: Vec(
        [],
    ),
    hashbang: None,
    directives: Vec(
        [],
    ),
    body: Vec(
        [],
    ),
    source_type: SourceType {
        language: JavaScript,
        module_kind: Script,
        variant: Standard,
        extension: None,
    },
}

===============  Error  ===============
[
    OxcDiagnostic {
        inner: OxcDiagnosticInner {
            message: "<script> and <script setup> must have the same language type.",
            labels: None,
            help: None,
            note: None,
            severity: Error,
            code: OxcCode {
                scope: None,
                number: None,
            },
            url: None,
        },
    },
]

=============== Codegen ===============


===============  Spans  ===============
